# iris_stonefish

./: CMakeLists.txt  README.md  package.xml
data/: Part.STL  dock.mtl  dock1_freecad.amf  untitled.stl
data/iris/: thruster_t200.mtl
launch/: iris.launch  iris_acousitc_full.launch  iris_acoustic_no_gpu.launch  iris_description.launch  iris_parsed.launch
scenarios/: dock.scn  iris.scn  iris_tank.scn  iris_tank2.scn  net.scn
scene/: iris.rviz
urdf/: iris.urdf.xacro  iris.urdf.xarco
